CH3_L1_System_Prompt

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 /functions/__pycache__
 tests_CH2_L2.py
 tests_CH2_L3.py
+tests_CH2_L4.py
+/calculator/lorem.txt
+/calculator/pkg/lorem.txt
+/calculator/pkg/morelorem.txt
